[gd_scene load_steps=4 format=3 uid="uid://11kelrsxmpor"]

[ext_resource type="Script" path="res://scenes/guis/settings_menu.gd" id="1_1k3ea"]
[ext_resource type="Shader" path="res://scenes/guis/blur.gdshader" id="1_05by3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8j4jg"]
shader = ExtResource("1_05by3")
shader_parameter/lod = 1.5

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1k3ea")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8j4jg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.5
offset_top = -327.5
offset_right = 456.5
offset_bottom = 327.5
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 25
columns = 2

[node name="MasterVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0

[node name="MusicVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[node name="FxVolLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound Fx Volume"

[node name="FxVolSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[node name="Video" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 25
columns = 2

[node name="HCLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "High Contrast"

[node name="HCBtn" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
alignment = 2

[node name="CBLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Colorblind Mode"

[node name="CBBtn" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2

[connection signal="drag_ended" from="TabContainer/Audio/MarginContainer/GridContainer/MasterVolSlider" to="." method="_on_master_vol_slider_drag_ended"]
[connection signal="drag_ended" from="TabContainer/Audio/MarginContainer/GridContainer/MusicVolSlider" to="." method="_on_music_vol_slider_drag_ended"]
[connection signal="drag_ended" from="TabContainer/Audio/MarginContainer/GridContainer/FxVolSlider" to="." method="_on_fx_vol_slider_drag_ended"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/HCBtn" to="." method="_on_hc_btn_toggled"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/CBBtn" to="." method="_on_cb_btn_toggled"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/VSyncBtn" to="." method="_on_v_sync_btn_toggled"]
