extends Control

# video settings
#@onready var 

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


func _on_master_vol_slider_drag_ended(value_changed:bool) -> void:
	pass # Replace with function body.

func _on_music_vol_slider_drag_ended(value_changed:bool) -> void:
	pass # Replace with function body.

func _on_fx_vol_slider_drag_ended(value_changed:bool) -> void:
	pass # Replace with function body.

func _on_hc_btn_toggled(toggled_on:bool) -> void:
	pass # Replace with function body.

func _on_cb_btn_toggled(toggled_on:bool) -> void:
	pass # Replace with function body.

func _on_v_sync_btn_toggled(toggled_on:bool) -> void:
	pass # Replace with function body.
